<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"

    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy40dp"
        android:background="@color/light_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_bill_list_back"
            android:layout_width="@dimen/xy30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/xy10dp"
            android:background="@null"
            android:clickable="true"
            android:src="@drawable/left_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bill_list"
            android:textColor="@color/black"
            android:textSize="@dimen/xy18sp" />
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:padding="@dimen/xy5dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_item_payment_ticket_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bill_Number"
            android:textColor="@color/black"
            android:textSize="@dimen/xy10sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="@dimen/xy0.5dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray"/>
        <TextView
            android:id="@+id/tv_item_payment_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="@dimen/xy10sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="@dimen/xy0.5dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray"/>
        <TextView
            android:id="@+id/tv_item_payment_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="@dimen/xy10sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="@dimen/xy0.5dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray"/>
        <TextView
            android:id="@+id/tv_item_payment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pay_option"
            android:textSize="@dimen/xy10sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="@dimen/xy0.5dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray"/>
        <TextView
            android:id="@+id/tv_item_payment_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="@dimen/xy10sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
    <ListView
        android:id="@+id/lv_bill_list_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>