<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy40dp"
        android:background="@color/light_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_price_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/xy10dp"
            android:background="@null"
            android:clickable="true"
            android:src="@drawable/left_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price_edit"
            android:textColor="@color/black"
            android:textSize="@dimen/xy18sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_price_edit_icon"
        android:src="@drawable/ticket"
        android:layout_width="@dimen/xy86dp"
        android:layout_height="@dimen/xy86dp"
        android:layout_marginTop="@dimen/xy10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xy10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/xy10sp"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/et_price_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/xy30dp"
        android:layout_marginLeft="@dimen/xy30dp"
        android:hint="@string/title"
        android:textSize="@dimen/xy10sp"
        android:layout_marginTop="@dimen/xy5dp"
        android:maxLength="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xy10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/xy10sp"
        android:text="@string/price"/>
    <EditText
        android:id="@+id/et_price_edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/xy30dp"
        android:layout_marginLeft="@dimen/xy30dp"
        android:inputType="number"
        android:hint="@string/price"
        android:textSize="@dimen/xy10sp"
        android:maxLength="10"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xy10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/xy10sp"
        android:text="@string/desc"/>
    <EditText
        android:id="@+id/et_price_edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/xy30dp"
        android:layout_marginLeft="@dimen/xy30dp"
        android:textSize="@dimen/xy10sp"
        android:hint="@string/desc"
        android:maxLength="20"/>

    <Button
        android:id="@+id/btn_price_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xy20dp"
        android:textSize="@dimen/xy10sp"
        android:text="@string/save"/>

</LinearLayout>