<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical" >


        <LinearLayout
            android:id="@+id/ll_select_price_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_select_price_title_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/xy20sp"
                android:text="@string/tvm_buy_title"/>
        </LinearLayout>

        <GridView
            android:id="@+id/gv_select_price_list"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:numColumns="3"
            android:layout_height="0dp"></GridView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_ticket_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/xy30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_main_ticket_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/confirm_bug"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/iv_main_ticket_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/xy25dp"
            android:layout_marginTop="@dimen/xy10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_select_price_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="0"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/zhang"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/xy25dp"
            android:layout_marginTop="@dimen/xy5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="right"
                android:text="@string/amount"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_select_price_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/yuan"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>