<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy40dp"
        android:background="@color/light_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_change_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/xy10dp"
            android:background="@null"
            android:clickable="true"
            android:src="@drawable/left_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/xy18sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy1dp"
        android:layout_marginLeft="@dimen/xy10dp"
        android:layout_marginRight="@dimen/xy10dp"
        android:background="@drawable/wear_1" />

    <TextView
        android:id="@+id/tv_change_password_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xy30dp"
        android:layout_marginLeft="@dimen/xy10dp"
        android:layout_marginRight="@dimen/xy10dp"
        android:textSize="@dimen/xy20sp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="admin"
        android:padding="@dimen/xy10dp"/>

    <EditText
        android:id="@+id/et_change_password_psd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xy20dp"
        android:layout_marginRight="@dimen/xy20dp"
        android:drawablePadding="@dimen/xy10dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:cursorVisible="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="@dimen/xy10dp"
        android:textColor="#666666"
        android:textSize="@dimen/xy18dp" />
    <EditText
        android:id="@+id/et_change_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xy20dp"
        android:layout_marginRight="@dimen/xy20dp"
        android:drawablePadding="@dimen/xy10dp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/xy10dp"
        android:hint="@string/password_again"
        android:cursorVisible="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#666666"
        android:textSize="@dimen/xy18dp" />

    <Button
        android:id="@+id/bt_change_password_change"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/xy40dp"
        android:layout_margin="@dimen/xy20dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="@dimen/xy16sp" />

</LinearLayout>