<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy40dp"
        android:background="@color/light_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_user_list_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/xy10dp"
            android:background="@null"
            android:clickable="true"
            android:src="@drawable/left_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/xy18sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xy1dp"
        android:layout_marginLeft="@dimen/xy10dp"
        android:layout_marginRight="@dimen/xy10dp"
        android:background="@drawable/wear_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/xy20dp">

        <TextView
            android:id="@+id/tv_user_list_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xy10dp"
            android:layout_marginRight="@dimen/xy10dp"
            android:background="#FFFFFF"
            android:gravity="center|left"
            android:paddingBottom="@dimen/xy10dp"
            android:paddingLeft="@dimen/xy20dp"
            android:paddingRight="@dimen/xy20dp"
            android:paddingTop="@dimen/xy10dp"
            android:text="@string/admin"
            android:textSize="@dimen/xy16sp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/xy1dp"
            android:layout_marginLeft="@dimen/xy10dp"
            android:layout_marginRight="@dimen/xy10dp"
            android:background="@drawable/wear_2" />


        <TextView
            android:id="@+id/tv_user_list_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xy10dp"
            android:layout_marginRight="@dimen/xy10dp"
            android:background="#FFFFFF"
            android:gravity="center|left"
            android:paddingBottom="@dimen/xy10dp"
            android:paddingLeft="@dimen/xy20dp"
            android:paddingRight="@dimen/xy20dp"
            android:paddingTop="@dimen/xy10dp"
            android:text="@string/manager"
            android:textSize="@dimen/xy16sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/xy1dp"
            android:layout_marginLeft="@dimen/xy10dp"
            android:layout_marginRight="@dimen/xy10dp"
            android:background="@drawable/wear_2" />


    </LinearLayout>

</LinearLayout>